Add calculation for all products

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
                      </div>
 
                      <div class="col-md-4 status">
-                        <h5>$1,278</h5>
-                        <h5>$0</h5>
-                        <h5>$1,278</h5>
+                        <h5>$<span id="sub-total">1278</span></h5>
+                        <h5>$<span id="tax-amount">0</span></h5>
+                        <h5>$<span id="final-total">1278</span></h5>
                      </div>
                   </div>
                </div>
@@ -79,6 +79,7 @@
          </div>
       </div>
    </section>
+   <script src="js/common.js"></script>
    <script src="js/case.js"></script>
    <script src="js/phone.js"></script>
 </body>
